plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //spring
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'
    //스웨거
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //firebase
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.1.1'
    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //
    implementation 'org.springframework.boot:spring-boot-starter-web'


}